--- a/templates/base.html
+++ b/templates/base.html
@@ -9,33 +9,35 @@
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <script src="{% static "js/jquery.min.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
     {% block extra_head %}
     {% endblock %}{#每个页面的自己js,css等#}
 </head>
 <body>
-<div class="main">
-    <div class="menu">{#所以页面同一个导航栏#}
-        <ul class="nav">
+<div class="mymain">
+    <div class="mymenu">{#所以页面同一个导航栏#}
+        <ul class="mynav">
             <li><a id="l1" href="{% url "home" %}">首页</a></li>
             <li><a id="l2" href="{% url "order" %}">订票</a></li>
             <li><a id="l3" href="{% url "about" %}">关于</a></li>
         </ul>
         <div class="userstatus">
             <span>你好，请
-                <a>登录</a>|
-                <a>注册</a>|
+                <a href="{% url "loginin" %}">登录</a>|
+                <a href="{% url "register" %}">注册</a>|
             </span>
             <span>
-                <a>谁的12306</a>
+                <a href="#">谁的12306</a>
             </span>
         </div>
     </div>
-    <div class="content">{#每个页面具体的内容#}
+    <div class="mycontent">{#每个页面具体的内容#}
     {% block content %}
     {% endblock content %}
     </div>
-    <div class="footer">{#每个页面具体的结尾#}
+    <div class="myfooter">{#每个页面具体的结尾#}
         <p>Thanks for visiting my site! </p>
     </div>
 </div>
