--- a/templates/Home.html
+++ b/templates/Home.html
@@ -13,6 +13,6 @@
     </style>
 {% endblock %}
 
-{% block content%}
-首页ing...
+{% block content%}{% load staticfiles %}
+<img src="{% static "img/shouye.jpg" %}"></img>
 {% endblock %}
