--- a/templates/about.html
+++ b/templates/about.html
@@ -14,5 +14,6 @@
 {% endblock %}
 
 {% block content%}
-这是关于页面
+{% load staticfiles %}
+<img src="{% static "img/guanyu.jpg" %}"></img>
 {% endblock %}
