--- a/templates/ordersearch.html
+++ b/templates/ordersearch.html
@@ -6,6 +6,7 @@
     <script type="text/javascript">
     $(function(){
         $("#l2").css("background-color","#ffffff");
+
     });
     </script>
     <style>
@@ -14,5 +15,7 @@
 {% endblock %}
 
 {% block content%}
-订票正在开发中...
+    <form>
+    订票开发中...
+    </form>
 {% endblock %}
