--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,11 @@
         {% block title %}{% endblock %}
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
     <script src="{% static "js/jquery.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/jajxtools.js" %}"></script>
     {% block extra_head %}
     {% endblock %}{#每个页面的自己js,css等#}
 </head>
@@ -24,13 +25,14 @@
             <li><a id="l3" href="{% url "about" %}">关于</a></li>
         </ul>
         <div class="userstatus">
-            <span>你好，请
-                <a href="{% url "loginin" %}">登录</a>|
-                <a href="{% url "register" %}">注册</a>|
-            </span>
-            <span>
-                <a href="#">谁的12306</a>
-            </span>
+            {% if luser %}
+                <label>你好,</label>
+                <a href="#">luser</a>
+            {% else %}
+                <label>你好,请</label>
+                <a href="{% url "loginin" %}">登录 | </a>
+                <a href="{% url "register" %}">注册</a>
+            {% endif %}
         </div>
     </div>
     <div class="mycontent">{#每个页面具体的内容#}
@@ -38,7 +40,9 @@
     {% endblock content %}
     </div>
     <div class="myfooter">{#每个页面具体的结尾#}
-        <p>Thanks for visiting my site! </p>
+        <p>欢迎,欢迎，欢迎</p>
+        <p>版权所有©G409 计算研究院</p>
+        <p>京ICP备1111111111号</p>
     </div>
 </div>
 </body>
