--- a/templates/ordersearch.html
+++ b/templates/ordersearch.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content%}{% load static %}
-    <form>
+    <form class="form-inline">
     {% crsf_token %}
     订票开发中...
     </form>
