--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,9 @@
             <li><a id="l3" href="{% url "about" %}">关于</a></li>
         </ul>
         <div class="userstatus">
-            {% if luser %}
+            {% if user and user.is_authenticated %}
                 <label>你好,</label>
-                <a href="#">luser</a>
+                <a href="#">{{ user.nickName }}</a>
             {% else %}
                 <label>你好,请</label>
                 <a href="{% url "loginin" %}">登录 | </a>
