--- a/templates/login.html
+++ b/templates/login.html
@@ -25,15 +25,18 @@
 {% block content%}
     <form action="" method="post" class="form-inline">{% csrf_token %}
     <div style="width: 100%;background-color: white;height: 400px;margin-top: 100px">
+        {% if err %}
+        <p style="color: red;text-align: center;width: 100%;display: block">{{ err }}</p>
+        {% endif %}
         <table class="logindiv">
             <tr>
                 <td>
-                    <label>用户名:</label> <input class="form-control" type="text">
+                    <label>用户名:</label> <input name="uname" class="form-control" type="text">
                 </td>
             </tr>
             <tr>
                 <td>
-                    <label>密码:</label> <input class="form-control" type="password">
+                    <label>密码:</label> <input name="pwd" class="form-control" type="password">
                 </td>
             </tr>
             <tr>
