--- a/templates/about.html
+++ b/templates/about.html
@@ -15,5 +15,7 @@
 
 {% block content%}
 {% load staticfiles %}
-<img src="{% static "img/guanyu.jpg" %}"></img>
+    <div  style="margin:auto; padding: 0px;width: 100%;text-align: center">
+        <img src="{% static "img/guanyu.jpg" %}"></img>
+    </div>
 {% endblock %}
