--- a/templates/ordersearch.html
+++ b/templates/ordersearch.html
@@ -16,6 +16,8 @@
 
 {% block content%}
     <form class="form-inline">{% csrf_token %}
-    订票开发中...
+    <div style="margin:auto; padding: 0px; width: 100%;text-align: center;overflow:hidden">
+       开发中..
+    </div>
     </form>
 {% endblock %}
