--- a/templates/Home.html
+++ b/templates/Home.html
@@ -14,5 +14,7 @@
 {% endblock %}
 
 {% block content%}{% load staticfiles %}
-<img src="{% static "img/shouye.jpg" %}"></img>
+    <div style="margin:auto; padding: 0px; width: 100%;text-align: center;overflow:hidden">
+        <img src="{% static "img/shouye.jpg" %}"></img>
+    </div>
 {% endblock %}
