--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="{% static "css/style.css" %}">
     <script src="{% static "js/jquery.min.js" %}"></script>
     <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/jajxtools.js" %}"></script>
+    <script src="{% static "js/jquery.blockUI.js" %}"></script>
+    <script src="{% static "js/ajaxtools.js" %}"></script>
     {% block extra_head %}
     {% endblock %}{#每个页面的自己js,css等#}
 </head>
