--- a/templates/register.html
+++ b/templates/register.html
@@ -72,7 +72,7 @@
                 {% endfor %}
              <tr>
                 <td colspan="2">
-                   <input type="submit" id="subt" class="btn bnt-sm" value="注册">
+                   <input type="submit" id="subt" class="btn btn-default" value="注册">
                 </td>
              </tr>
             </table>
