--- a/templates/login.html
+++ b/templates/login.html
@@ -6,14 +6,14 @@
     <script type="text/javascript">
     $(function () {
         {% if msg %}
-        alert("{{ msg }}");
+        myalert("{{ msg }}");
         {% endif %}
 {#        $("[data-toggle='popover']").popover();#}
     $("input[type=submit]").click(function(e){
         if ($("#uname").val()==""||$("#upwd").val()=="")
         {
             e.preventDefault();
-            alert("请输入用户名和密码!");
+            myalert("请输入用户名和密码!");
         }
     });
     });
