--- a/templates/contactpage.html
+++ b/templates/contactpage.html
@@ -4,7 +4,62 @@
 {% endblock %}
 {% block extra_head %}
     <script type="text/javascript">
+
+    function addrealotr(btn){
+        var t1= $("input[name='realname']");
+        var t2= $("input[name='phone']");
+        var t3= $("input[name='idcard']");
+        if (t1.val()==''||t1.val()==''||t3.val()=='') {
+            myalert("所有项都不能为空！");
+            return false;
+        }
+        var da= $("#real_form").serialize();
+        $.ajax({
+            type: "POST",
+            data: da,
+            url: "{% url "addotherreal" %}",
+            dataType: "json", {# 返回值类型 #}
+            success: function(data, status) {
+                $.unblockUI();
+                alert(data.msg);{# 返回的消息! #}
+                if (data.suc=='true'){# 修改成功! #}{
+                    $(btn).disable();
+                    $("#toreal_div").disable();
+                    $(t1).disable();$(t2).disable();$(t3).disable();
+                }
+            },
+            error: function (request, textStatus, errorThrown) {
+                alert("服务器忙！")
+            }
+        });
+    }
+
+    function delpeo(btn,id){
+        if (!confirm("你确定删除吗？"))
+            return false
+        $.ajax({
+            type: "POST",
+            data: {'id':id},
+            url: "{% url "delpeople" %}",
+            dataType: "json", {# 返回值类型 #}
+            success: function(data, status) {
+                $.unblockUI();
+                alert(data.msg);
+                if (data.suc=='true'){# 修改成功! #}{
+                    $(btn).parent().parent().remove();
+                }
+            },
+            error: function (request, textStatus, errorThrown) {
+                alert("服务器忙！")
+            }
+        });
+    }
+
     $(function(){
+        $("#to_add").click(function(){
+            $("#real_form").show();
+            $("#inreal").hide();
+        });
     });
     </script>
     <style>
@@ -33,6 +88,7 @@
     }
     .leftnav dl dd{
         height: 30px;
+        margin-bottom: 5px;
         line-height: 30px;
     }
     .leftnav dl dd:hover{
@@ -57,20 +113,18 @@
         <dl>
             <dt>用户信息</dt>
             <dd><a href="{% url "userinfo" %}">用户信息管理</a></dd>
-            <dd style="background-color: #a6e1ec"><a href="#">联系人管理</a></dd>
+            <dd style="background-color: #a6e1ec"><a href="{% url "contactinfo" %}">联系人管理</a></dd>
             <dt>订单</dt>
             <dd><a href="#">订单</a></dd>
             <dd><a href="#">退订</a></dd>
         </dl>
     </div>
     <div class="rightcent">
-    <table class="table table-striped table-bordered table-hover table-condensed">
-    <thead >
-    <tr>
-       <th colspan="4">
-           <input type="button" class="btn btn-primary btn-sm" value="添加">
-       </th>
-    </tr>
+    <div style="margin-top: 10px">
+        <input id="to_add" type="button" class="btn btn-primary" value="添加">
+    </div>
+    <table id="inreal" class="table table-striped table-bordered table-hover table-condensed">
+    <thead>
     <tr>
         <th style="text-align: center">真实姓名</th>
         <th style="text-align: center">身份证</th>
@@ -84,11 +138,30 @@
             <td>{{ row.1 }}</td>
             <td>{{ row.2 }}</td>
             <td>{{ row.3 }}</td>
-            <td><input type="button" class="btn btn-danger btn-sm" value="删除"></td>
+            <td><input type="button" onclick="delpeo(this,{{ row.0 }})" class="btn btn-danger btn-sm" value="删除"></td>
             </tr>
         {% endfor %}
     </tbody>
     </table>
+    <form id="real_form" style="display: none">
+        <table class="table">
+                <tr>
+                    <td><label>真实姓名:</label></td>
+                    <td><input name="realname" type="text" class="form-control"></td>
+                </tr>
+                <tr>
+                    <td><label>电话:</label></td>
+                    <td><input name="phone" type="tel" class="form-control"></td>
+                </tr>
+                <tr>
+                    <td><label>身份证:</label></td>
+                    <td><input name="idcard" type="text" class="form-control"></td>
+                </tr>
+                <tr>
+                    <td colspan="2"><input type="button" onclick="addrealotr(this)" value="保存" class="btn btn-primary"></td>
+                </tr>
+            </table>
+    </form>
     </div>
     </div>
 {% endblock %}
