--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
         <ul class="mynav">
             <li><a id="l1" href="{% url "home" %}">首页</a></li>
             <li><a id="l2" href="{% url "order" %}">订票</a></li>
+            <li><a id="15" href="{% url "ypcx" %}" >余票</a></li>
             <li><a id="l3" href="{% url "about" %}">关于</a></li>
         </ul>
         <div class="userstatus">
